# dota-350k

./: .gitignore  README.md  pyproject.toml
dataset_processing/dota/: add_metadata.py  create_bracket_info.py  prepare_dataset.py  remove_incomplete_matches.py  util.py
dataset_processing/opendota/: convert.py
resources/: heros.json  items-7.25c.json  roles.json
